frontend/test/should_fail/setmin_exec.grg
sequence s
{
	{{ set<object>{}.min() != null }}
}
